--- a/app/views/centres/index.html.erb
+++ b/app/views/centres/index.html.erb
@@ -12,15 +12,18 @@
       <a href="http://westfield.com">A link</a>
     </nav>
   </div>
-
+  
   <a class="national-hero" href="http://youtube.com" rel="external">
-    <div></div>
+    <span class="hide-visually">Westfield Campaign video</span>
+    <div class="national-hero__img-1 is-loaded"></div>
+    <div class="national-hero__img-2 is-loaded"></div>
   </a>
 </header>
 
+
 <main class="main" id="main" role="main">
   <div class="container <%= yield(:class_for_main) %>">
-  <p>lasdflaksjaldskf ;lkasjdf ;alksdjf ;laksdjf ;aslkdjf ;lkajds f;lkja ;sdlfkj ;aslkdfja ;sdlkfj ;alsdkjfa ;sldkfja;lskdfj</p>
+  <p>First line. lasdflaksjaldskf ;lkasjdf ;alksdjf ;laksdjf ;aslkdjf ;lkajds f;lkja ;sdlfkj ;aslkdfja ;sdlkfj ;alsdkjfa ;sldkfja;lskdfj</p>
 
   <p>lasdflaksjaldskf ;lkasjdf ;alksdjf ;laksdjf ;aslkdjf ;lkajds f;lkja ;sdlfkj ;aslkdfja ;sdlkfj ;alsdkjfa ;sldkfja;lskdfj</p>
 
