Comment out footer on centre info page until its ready

--- a/app/views/centre_info/show.html.erb
+++ b/app/views/centre_info/show.html.erb
@@ -406,6 +406,8 @@
 </div>
 <%# //Divider %>
 
+<%# Remove "if false" conditional statement once other sections are ready %>
+<% if false %>
 <footer class="grid grid--gutter-dbl"> 
   <div class="grid__item non-palm-one-half">
     <%# Shopping hours box %>
@@ -439,4 +441,4 @@
     <%# //Centre services box %>
   </div>
 </footer>
-
+<% end %>
