Set active search result colour to dotted line

--- a/app/assets/stylesheets/partials/layout/_header.scss
+++ b/app/assets/stylesheets/partials/layout/_header.scss
@@ -1146,6 +1146,9 @@ $header-color-link-hover: $color-brand !default;
 							display: block;
 							color: $color-link;
 
+							/* Active / focus */
+							&.is-active {outline: 1px dotted $color-link;}
+
 							/* Hover/Focus */
 							&:hover,
 							&:focus {color: $color-link-hover;}
