--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -149,6 +149,7 @@ Global stylesheet
 @import "partials/modules/fine-print";
 @import "partials/modules/promo-tile";
 @import "partials/modules/no-content-fallback-msg";
+@import "partials/modules/gallery";
 
   /* Modules -> Widgets */
   @import "partials/modules/widgets/accordion";
