--- a/app/assets/stylesheets/partials/utils/_mixins.scss
+++ b/app/assets/stylesheets/partials/utils/_mixins.scss
@@ -341,7 +341,9 @@
 	Note:
 		Keep an eye on browser support:
 		-	Transition: 	http://caniuse.com/#search=transition
-		-	Animation: 		http://caniuse.com/#feat=css-animation
+    - Animation:    http://caniuse.com/#feat=css-animation
+    - Keyframes:    http://docs.webplatform.org/wiki/css/atrules/@keyframes
+		-	Animation delay: 		http://docs.webplatform.org/wiki/css/properties/animation-delay
 		-	Multi-column: 	http://caniuse.com/#feat=multicolumn
 		-	Hyphens: 		http://caniuse.com/#feat=css-hyphens
 		-	Box sizing: 	http://caniuse.com/#feat=css3-boxsizing
@@ -351,11 +353,18 @@
 	Credit:
 		-	https://github.com/csswizardry/inuit.css/pull/102#issuecomment-12825976
 		-	https://gist.github.com/3911033
+    - https://gist.github.com/greypants/3185028
 
 	Examples:
 		@include prefix(transition, border 0.2s linear, box-shadow 0.2s linear);
 		@include prefix(animation, fade-in 1.5s 0.5s both);
 		@include prefix(border-image, url(img/preloader.gif) 3 repeat);
+    @include prefix(keyframes, hero-animation) {
+      0% {opacity: 0;}
+      10% {opacity: 1;}
+      50% {opacity: 1;}
+      100% {opacity: 0;}
+    }
 
 		Loose version:
 		@include prefix-loose(transition, all .15s, (-webkit-, ""));
@@ -373,6 +382,21 @@
   @else if $property == animation {
     -webkit-#{$property}: $value;
 		#{$property}: $value;
+  }
+
+  /* Keyframes */
+  @else if $property == keyframes {
+    @-webkit-keyframes $value {@content;}
+    @-moz-keyframes $value {@content;}
+    @keyframes $value {@content;}
+  }
+
+  /* Animation delay */
+  @else if $property == animation-delay {
+    -webkit-animation-delay: $value;
+    -moz-animation-delay: $value;
+    -o-animation-delay: $value;
+    animation-delay: $value;
   }
 
 	/* Multi-column */
@@ -941,6 +965,46 @@
 
     }
 
+}
+
+/* [GALLERY]
+-------------------------------------------------------*/
+/*
+  Usage:
+    Creates a CSS animated gallery
+
+  Credit:
+    https://github.com/benschwarz/gallery-css
+
+  Examples:
+    @include gallery($item-count: 2, $display-duration: 7, $transition-duration: 2);
+*/
+
+@mixin gallery($item-count, $display-duration, $transition-duration) {
+  /* Work out the total duration of the entire animation, based on how many items there are and how long they should each be displayed for */
+  $total-duration: $display-duration * $item-count;
+
+  /* Creates the keyframe animation */
+  @include prefix(keyframes, gallery-animation-#{$item-count}) {
+    0% {opacity: 0;}
+    #{100% * $transition-duration / $total-duration},
+    #{100% * $display-duration / $total-duration} {opacity: 1;}
+    #{100% * ($display-duration + $transition-duration) / $total-duration},
+    100% {opacity: 0;}
+  }
+
+  /* Creates unique gallery class name based on no. of items */
+  .gallery--items-#{$item-count} {
+    /* Runs the animation when the item is loaded. Bit specific to catering for lazy-loading at the moment... */
+    .gallery__item.is-loaded {@include prefix(animation, gallery-animation-#{$item-count} #{$total-duration}s infinite);}
+  }
+
+  @for $j from 1 through $item-count {
+    .gallery__item.is-loaded:nth-of-type(#{$j}) {
+      $delay: #{($j - 1) * ($display-duration) - $transition-duration}s;
+      @include prefix(animation-delay, #{$delay});
+    }
+  }
 }
 
 /* [PLACEHOLDER SELECTOR MEDIA QUERY FIX]
